# fantasy_forge

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  area.py  builder.py  character.py  container.py  enemy.py  entity.py  gateway.py  inventory.py  item.py  model.md  model.py  notes.md  player.py  pyproject.toml  utils.py  weapon.py
data/l10n/en/: main.ftl
data/worlds/chaosdorf/: world.toml
data/worlds/chaosdorf/areas/: cave.toml  conference room.toml  everyones-toilet.toml  flinta toilet.toml  floor.toml  hackcenter.toml  kitchen.toml  lounge.toml  premium-toilet.toml  wetlab.toml
data/worlds/test/: world.toml
data/worlds/test/Entity/: test_entity.toml
data/worlds/test/areas/: test_area.toml
docs/: notes.md
fantasy_forge/: area.py  character.py  container.py  enemy.py  entity.py  gateway.py  inventory.py  item.py  key.py  main.py  player.py  shell.py  utils.py  weapon.py  world.py
l10n/en/: main.ftl
src/: init_world.py
src/builder/: add_asset.py  builder.py  create_world.py
src/fantasy_forge/: __main__.py  add_asset.py  area.py  armour.py  character.py  config.py  config.toml  container.py  enemy.py  entity.py  folder_structure.py  gateway.py  inventory.py  item.py  key.py  load_assets.py  localization.py  main.py  messages.py  multiplayer.py  player.py  shell.py  utils.py  weapon.py  web.py  world.py
tests/integration/: test_initial_prompt.py
web/: README.md  ctypes.py  index.html  package.json  style.css
worlds/chaosdorf/: README.md  world.toml
worlds/chaosdorf/areas/: cave.toml  kitchen.toml  lounge.toml
(+25 files in other folders)
