[project]
name = "fantasy-forge"
version = "0.1.0"
description = "A textadventure that starts at Chaosdorf and ends wherever we want."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "pythonfoo", email = "pythonfoo@chaosdorf.de" }
]
dependencies = [
    "fluent.runtime",
    "toml",
    "huepy",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
fantasy-forge = "fantasy_forge.main:main"
fantasy-forge-server = "fantasy_forge.multiplayer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "brython>=3.13.1",
    "commandlib>=0.3.5",
    "hitchstory>=0.24.0",
    "icommandlib>=0.8.0 ; sys_platform == 'unix'",
    "pytest>=8.3.3",
]
